# fakeGoodsmile

./: .env.sample  .gitignore  README.md  manage.py  pyproject.toml  pytest.ini
API/: admin.py  choices.py  models.py  permissions.py  urls.py
API/migrations/: 0001_initial.py  0002_manufacter_serie_user_user_type_product_image.py  0003_rename_manufacter_manufacturer_and_more.py  0004_rename_image_productimage.py  0005_alter_productimage_product.py  0006_remove_productimage_product_product_images.py  0007_remove_product_images_productimage_product.py
API/serializers/: __init__.py  auth_serializer.py  product_serializer.py
API/views/: __init__.py  auth_views.py  product_views.py
fakeGoodsmile/: asgi.py  urls.py  wsgi.py
fakeGoodsmile/settings/: base.py  config.py
tests/: conftest.py
tests/api/: test_auth_success.py  test_manufacturer_success.py  test_product_success.py  test_serie_success.py
tests/fixtures/: fixture_auth.py
