[tool.poetry]
name = "fakegoodsmile"
version = "0.1.0"
description = ""
authors = ["Joaquin Huaman Pino <quinino1@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.3"
djangorestframework = "^3.14.0"
python-dotenv = "^1.0.0"
pytest-django = "^4.5.2"
psycopg2-binary = "^2.9.6"


[tool.poetry.group.dev.dependencies]
pylint = "^2.17.4"
pylint-django = "^2.5.3"
black = "^23.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
